--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8.34.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
+    "helmet": "^6.0.1",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
@@ -31,6 +32,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "express-winston": "^4.2.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.0",
